--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "npm": "^9.6.6"
-  }
+    "got": "^12.6.0",
+    "npm": "^9.6.6",
+    "oauth-1.0a": "^2.2.6",
+    "querystring": "^0.2.1",
+    "twit": "^2.2.11"
+  },
+  "main": "app.js",
+  "type": "module"
+
+
 }
